// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader should render correctly with props and children 1`] = `
<div>
  <div
    class="css-3v687w row"
  >
    <button
      aria-label="Back"
      class="css-oriwu1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left "
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="d-flex justify-content-center col"
    >
      <h1
        class="css-19nza10"
      >
        Contactpedia
      </h1>
    </div>
    <div
      class="d-flex justify-content-center col"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`AppHeader should render correctly without props 1`] = `
<div>
  <div
    class="css-3v687w row"
  >
    <div
      class="d-flex justify-content-center col"
    >
      <h1
        class="css-19nza10"
      >
        Contactpedia
      </h1>
    </div>
  </div>
</div>
`;
